--- a/public/themen/wohnen-ar-stuttgart.html
+++ b/public/themen/wohnen-ar-stuttgart.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="de">
+<html dir="rtl" class="no-js" lang="de">
 <head>
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Arbeiten in Deutschland - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.">
+    <title>السكن في ألمانيا - Einfach Hilfe finden mit clarat.org</title>
+    <meta name="description" content="اللاجئ يتمنى بالتأكيد أن يبني لنفسه بسرعة حياة جديدة. هذا يعني الحصول على حق اللجوء، العثور على عمل، والسكن في شقة خاصة. العثور على شقة في ألمانيا شئ صعب وخاصة بالنسبة للاجئين.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
@@ -55,12 +55,12 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Arbeiten.jpg)">
+<div class="hero" style="background-image: url(assets/images/Wohnen-ar.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
-            <h1 class="hero__headline">Arbeiten in Deutschland</h1>
+            <h1 class="hero__headline">السكن في ألمانيا</h1>
 
-            <div class="hero__intro">Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.</div>
+            <div class="hero__intro">اللاجئ يتمنى بالتأكيد أن يبني لنفسه بسرعة حياة جديدة. هذا يعني الحصول على حق اللجوء، العثور على عمل، والسكن في شقة خاصة. العثور على شقة في ألمانيا شئ صعب وخاصة بالنسبة للاجئين.</div>
         </div>
     </div>
 </div>
@@ -69,24 +69,22 @@
 
         <div class="content__left">
 
-            <p class="content__mobile-intro"><b>Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.</b></p>
+            <p class="content__mobile-intro"><b>اللاجئ يتمنى بالتأكيد أن يبني لنفسه بسرعة حياة جديدة. هذا يعني الحصول على حق اللجوء، العثور على عمل، والسكن في شقة خاصة. العثور على شقة في ألمانيا شئ صعب وخاصة بالنسبة للاجئين.</b></p>
 
-            <h2>Dürfen Flüchtlinge in Deutschland arbeiten? </h2>
+            <h2>كيف ومتى يمكنني أن أستأجر شقة في ألمانيا؟</h2>
 
-            <p>Das hängt von ihrem Aufenthaltsstatus ab. Und davon, wie lange sie schon in Deutschland sind. Asylbewerber haben am Anfang noch keine Arbeitserlaubnis. Das gilt für die ganze Zeit, in der sie in der Erstaufnahmeeinrichtung wohnen. Mindestens aber für 3 Monate. Wenn ein Flüchtling dann eine Aufenthaltsgestattung oder eine Duldung hat, darf er arbeiten. Er ist also auf dem Arbeitsmarkt. Wenn er ein Jobangebot hat, muss er eine Genehmigung von der Ausländerbehörde holen. Auf die muss man manchmal lange warten. Und viele Formulare dafür ausfüllen. </p>
-            <p>Manche Asylbewerber und Geduldete aus sicheren Herkunftsstaaten haben kein Recht, in Deutschland zu arbeiten. Das gilt für alle, die ihren Asylantrag nach dem 31. August 2015 gestellt haben. Und die eine Ablehnung bekommen haben. Für sie gilt ein so genanntes Arbeitsverbot. 2016 galten folgende Staaten als sichere Herkunftsstaaten: Bosnien und Herzegowina, Mazedonien, Serbien, Montenegro, Albanien, Kosovo, Ghana und Senegal.</p>
+            <p>كل شخص في ألمانيا له حق السكن. ولكن هناك فرق بين حق السكن والسكن في شقة خاصة. طالب اللجوء لابد أن يقيم في الثلاث شهور الأولى في مركز الإستقبال الأولي. مراكز الإستقبال هي غالباً ما تكون عبارة عن مباني لمدارس قديمة أو ساحات رياضية. وأحياناً يبقى اللاجئ فترة أطول هناك حتى تقرر السلطات في أي مدينة أو في أي منطقة يمكنه أن يسكن. إذا تقرر ذلك ينتقل اللاجئ إلى المكان الجديد ويسكن غالباً في مساكن مخصصة للاجئين.</p>
+            <p> بالحصول على تصريح إقامة مؤقت أو الحصول على الإعتراف كلاجئ أو بوضع الإقامة الدولدونج يمكن تغيير هذا الوضع. ففي العديد من الولايات الألمانية يمكن للاجئ حينها إستئجار شقة خاصة. ومع ذلك يظل وجوب الإقامة سارياً عليه حتى صدور قرار في قضية اللجوء. وهذا يعني أنه لا يمكنه مغادرة المدينة أو المنطقة التي يعيش فيها.</p>
+            <p>في حالة السماح باستئجار شقة خاصة تتكفل الدولة بدفع إيجار الشقة ولكن هناك حد أقصى للإيجار المسموح به. والمبلغ يتوقف على عدد الأفراد الذين يسكنون في الشقة؛ فالأسرة مثلاً يمكنها إستئجار شقة أكبر من الفرد الذي يعيش بمفرده وبالتالي مسموح للأسرة بمبلغ إيجار أعلى.</p>
 
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=arbeiten%20in%20deutschland&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.520007%2C13.404954&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/ar/refugees/%D8%B9%D8%B1%D9%88%D8%B6?utf8=%E2%9C%93&search_form%5Bquery%5D&search_form%5Bsearch_location%5D=Stuttgart%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=48.1351253%2C11.5819806&search_form%5Bcategory%5D=%D8%A7%D9%84%D8%B3%D9%83%D9%86&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">جِد المساعدة الآن ›</a>
 
         </div>
         <div class="content__right">
 
-            <h2>Wie finde ich eine Arbeit?</h2>
+            <h2>كيف يمكنني العثور على شقة؟</h2>
 
-            <p>Der deutsche Staat unterstützt Menschen, die auf der Suche nach einem Job sind. Auch Flüchtlinge. Das heißt dann Arbeitsförderung.</p>
-            <p>Für manche Flüchtlinge ist das Jobcenter zuständig. Und für manche Flüchtlinge die Agentur für Arbeit. Welche Behörde zuständig ist, hängt vom Aufenthaltsstatus ab. Wenn du eine Aufenthaltserlaubnis hast, kümmert sich das Jobcenter um die Arbeitsförderung. Wenn du eine Aufenthaltsgestattung oder eine Duldung hast, ist die Agentur für Arbeit für dich zuständig.</p>
-            <p>Es gibt auch einige Online-Portale, die extra für Flüchtlinge sind. Dort kannst du nach Jobs suchen. Oft kannst du dich dort registrieren und ein eigenes Profil erstellen. So können dich Arbeitgeber finden, die nach passenden Mitarbeitern suchen. Und es gibt viele Organisationen, die Flüchtlinge bei der Integration unterstützen. Einige dieser Organisationen helfen Flüchtlingen dabei, einen Job zu finden.</p>
-
+            <p>العثور على شقة وبخاصة في المدن الكبيرة هو أمر صعب. فالكثيرون يبحثون وهناك تنافس شديد. أحياناً يضطر الفرد للبحث لفترة طويلة. ولكن يوجد في ألمانيا منظمات يمكن فيها الحصول على إستشارات مجانية. هناك يمكن الحصول على معلومات مهمة بشأن البحث عن سكن وحول الإيجارات. ويمكن معرفة حقوق وواجبات المستأجر. وأين يمكن البحث عن عروض الشقق المتاحة للإيجار. وكذلك أيضاً أين يمكن الحصول على موبيليا بأسعار قليلة. </p>
         </div>
     </div>
     <!--<div class="cta-container">-->
@@ -98,9 +96,9 @@
 
     <div class="footer-main layout-inner">
             <ul class="footer-main__list ">
-                <li><a href="https://www.clarat.org/refugees/impressum" target="_blank">Impressum</a></li>
-                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">Datenschutz</a></li>
-                <li><a href="https://plus.clarat.org/wissen/" target="_blank">Blog</a></li>
+                <li style="margin-left: 1em"><a href="https://www.clarat.org/refugees/impressum" target="_blank">هيئة التحرير</a></li>
+                <li><a href="https://www.clarat.org/refugees/datenschutzhinweise" target="_blank">حماية البيانات</a></li>
+                <li><a href="https://plus.clarat.org/ar/wissen/" target="_blank">مدونة</a></li>
                 <li><a href="http://www.clarat.org/" target="_blank">www.clarat.org</a></li>
             </ul>
         </div>
