--- a/public/themen/integrationskurs-duesseldorf.html
+++ b/public/themen/integrationskurs-duesseldorf.html
@@ -4,8 +4,8 @@
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Arbeiten in Deutschland - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.">
+    <title>Integrationskurs - Einfach Hilfe finden mit clarat.org</title>
+    <meta name="description" content="Der Besuch eines Integrationskurses ist für viele Flüchtlinge Pflicht. Er soll ihnen dabei helfen, sich in Deutschland gut einzuleben. Was genau lernt man in einem Integrationskurs? Und wie und wo kann man ihn machen?">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
@@ -55,12 +55,12 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Arbeiten.jpg)">
+<div class="hero" style="background-image: url(assets/images/Integrationskurs-ar.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
-            <h1 class="hero__headline">Arbeiten in Deutschland</h1>
+            <h1 class="hero__headline">Integrationskurs</h1>
 
-            <div class="hero__intro">Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.</div>
+            <div class="hero__intro"> Der Besuch eines Integrationskurses ist für viele Flüchtlinge Pflicht. Er soll ihnen dabei helfen, sich in Deutschland gut einzuleben. Was genau lernt man in einem Integrationskurs? Und wie und wo kann man ihn machen?</div>
         </div>
     </div>
 </div>
@@ -69,23 +69,28 @@
 
         <div class="content__left">
 
-            <p class="content__mobile-intro"><b>Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.</b></p>
+            <p class="content__mobile-intro"><b>Der Besuch eines Integrationskurses ist für viele Flüchtlinge Pflicht. Er soll ihnen dabei helfen, sich in Deutschland gut einzuleben. Was genau lernt man in einem Integrationskurs? Und wie und wo kann man ihn machen?</b></p>
 
-            <h2>Dürfen Flüchtlinge in Deutschland arbeiten? </h2>
+            <h2>Was ist ein Integrationskurs?</h2>
 
-            <p>Das hängt von ihrem Aufenthaltsstatus ab. Und davon, wie lange sie schon in Deutschland sind. Asylbewerber haben am Anfang noch keine Arbeitserlaubnis. Das gilt für die ganze Zeit, in der sie in der Erstaufnahmeeinrichtung wohnen. Mindestens aber für 3 Monate. Wenn ein Flüchtling dann eine Aufenthaltsgestattung oder eine Duldung hat, darf er arbeiten. Er ist also auf dem Arbeitsmarkt. Wenn er ein Jobangebot hat, muss er eine Genehmigung von der Ausländerbehörde holen. Auf die muss man manchmal lange warten. Und viele Formulare dafür ausfüllen. </p>
-            <p>Manche Asylbewerber und Geduldete aus sicheren Herkunftsstaaten haben kein Recht, in Deutschland zu arbeiten. Das gilt für alle, die ihren Asylantrag nach dem 31. August 2015 gestellt haben. Und die eine Ablehnung bekommen haben. Für sie gilt ein so genanntes Arbeitsverbot. 2016 galten folgende Staaten als sichere Herkunftsstaaten: Bosnien und Herzegowina, Mazedonien, Serbien, Montenegro, Albanien, Kosovo, Ghana und Senegal.</p>
-
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=arbeiten%20in%20deutschland&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.520007%2C13.404954&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
+            <p>Ein Integrationskurs ist eine Kombination aus Sprachkurs und Orientierungskurs. Geflüchtete lernen also viel über die deutsche Sprache und das Leben in Deutschland. Der Sprachkurs dauert etwa 600 Stunden. Am Ende macht man eine B1-Prüfung. Im Sprachkurs geht es um Themen wie Arbeit, Alltag und Einkaufen. Oder um den Umgang mit Behörden oder das Schreiben von offiziellen Briefen. Im Orientierungskurs lernt man viel über die deutsche Geschichte, Kultur, Gesellschaft und Politik. Der Orientierungskurs dauert 60 Stunden und endet auch mit einer Prüfung. Wenn beide Prüfungen bestanden sind, erhält man ein Zeugnis.</p>
+            <p>
+            <h2>Wer muss oder darf Integrationskurs machen?</h2>
+            <ul style="padding-left: 5%">
+                <li><b>Flüchtlinge mit einer Aufenthaltserlaubnis als Asylberechtigter, als anerkannter Flüchtling oder als Subsidiärschutzberechtigter:</b> Sie müssen einen Integrationskurs machen. Außer sie können schon sehr gut Deutsch. </li>
+                <li><b>Flüchtlinge mit Duldung, Flüchtlinge, die mal eine Duldung hatten, oder Flüchtlinge, die über eine Verpflichtungserklärung nach Deutschland gekommen sind:</b> Sie dürfen einen Integrationskurs machen, wenn es noch freie Plätze gibt. Dazu müssen sie einen Antrag beim Bundesamt für Migration und Flüchtlinge (BAMF) stellen.</li>
+                <li><b>Flüchtlinge, die noch im Asylverfahren sind und eine gute Bleibeperspektive haben:</b> Sie dürfen einen Integrationskurs machen und müssen dafür einen Antrag stellen.</li>
+            </ul>
+            </p>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=integrationskurs&search_form%5Bsearch_location%5D=D%C3%BCsseldorf%2C+Deutschland&search_form%5Bgenerated_geolocation%5D=51.5135872%2C7.465298100000001&search_form%5Bcategory%5D=&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal%2Cfax%2Cletter&search_form%5Bage%5D=&search_form%5Btarget_audience%5D=&search_form%5Bexclusive_gender%5D=&search_form%5Blanguage%5D=&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family">Jetzt Hilfe finden ›</a>
 
         </div>
         <div class="content__right">
 
-            <h2>Wie finde ich eine Arbeit?</h2>
+            <h2>Wie findest du einen Integrationskurs und was kostet er?</h2>
 
-            <p>Der deutsche Staat unterstützt Menschen, die auf der Suche nach einem Job sind. Auch Flüchtlinge. Das heißt dann Arbeitsförderung.</p>
-            <p>Für manche Flüchtlinge ist das Jobcenter zuständig. Und für manche Flüchtlinge die Agentur für Arbeit. Welche Behörde zuständig ist, hängt vom Aufenthaltsstatus ab. Wenn du eine Aufenthaltserlaubnis hast, kümmert sich das Jobcenter um die Arbeitsförderung. Wenn du eine Aufenthaltsgestattung oder eine Duldung hast, ist die Agentur für Arbeit für dich zuständig.</p>
-            <p>Es gibt auch einige Online-Portale, die extra für Flüchtlinge sind. Dort kannst du nach Jobs suchen. Oft kannst du dich dort registrieren und ein eigenes Profil erstellen. So können dich Arbeitgeber finden, die nach passenden Mitarbeitern suchen. Und es gibt viele Organisationen, die Flüchtlinge bei der Integration unterstützen. Einige dieser Organisationen helfen Flüchtlingen dabei, einen Job zu finden.</p>
+            <p>Die Ausländerbehörde und das Jobcenter haben Listen. In diesen Listen stehen allen Schulen deiner Stadt, die Integrationskurse machen. Die Mitarbeiter vom Jobcenter helfen dir bei der Suche nach einem passenden Kurs. Außerdem gibt es in Deutschland noch viele andere Organisationen, die Geflüchteten bei der Suche helfen. Manche Organisationen unterstützen die Teilnehmer auch während des Kurses. Zum Beispiel, wenn sie Probleme haben. Oder wenn sie eine Betreuung für ihr Kind brauchen.</p>
+            <p>Das BAMF bezahlt den Integrationskurs fast vollständig. Flüchtlinge zahlen nur einen kleinen Beitrag. Flüchtlinge, die Arbeitslosengeld oder Asylbewerberleistungen bekommen, müssen gar nichts bezahlen. Dazu müssen sie einen Antrag beim BAMF stellen. Die Schule hilft Flüchtlingen dabei, diesen Antrag auszufüllen.</p>
 
         </div>
     </div>
