--- a/public/themen/wohnen-in-deutschland-koeln.html
+++ b/public/themen/wohnen-in-deutschland-koeln.html
@@ -4,8 +4,8 @@
     <link rel="dns-prefetch" href="//ajax.googleapis.com">
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Arbeiten in Deutschland - Einfach Hilfe finden mit clarat.org</title>
-    <meta name="description" content="Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.">
+    <title>Wohnen in Deutschland  - Einfach Hilfe finden mit clarat.org</title>
+    <meta name="description" content="Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Arbeit finden und in einer eigenen Wohnung leben. Eine Wohnung finden - das ist besonders für Flüchtlinge oft eine Herausforderung.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="width=device-width, initial-scale=1.0, user-scalable=1" name="viewport" />
     <meta content="" property="og:site_name" />
@@ -55,12 +55,12 @@
         </svg>
     </div>
 </header>
-<div class="hero" style="background-image: url(assets/images/Arbeiten.jpg)">
+<div class="hero" style="background-image: url(assets/images/Wohnen.jpg)">
     <div class="hero__container">
         <div class="hero__content layout-inner">
-            <h1 class="hero__headline">Arbeiten in Deutschland</h1>
+            <h1 class="hero__headline">Wohnen in Deutschland</h1>
 
-            <div class="hero__intro">Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.</div>
+            <div class="hero__intro">Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Arbeit finden und in einer eigenen Wohnung leben. Eine Wohnung finden - das ist besonders für Flüchtlinge oft eine Herausforderung.</div>
         </div>
     </div>
 </div>
@@ -69,23 +69,20 @@
 
         <div class="content__left">
 
-            <p class="content__mobile-intro"><b>Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Wohnung mieten und Arbeit finden. Für Geflüchtete gibt es dabei ein paar Dinge zu beachten.</b></p>
+            <p class="content__mobile-intro"><b>Wer geflohen ist, möchte sich schnell ein neues Leben aufbauen. Das heißt Asyl bekommen, eine Arbeit finden und in einer eigenen Wohnung leben. Eine Wohnung finden - das ist besonders für Flüchtlinge oft eine Herausforderung.</b></p>
 
-            <h2>Dürfen Flüchtlinge in Deutschland arbeiten? </h2>
+            <h2>Wie und wann kann ich in Deutschland eine Wohnung mieten?</h2>
 
-            <p>Das hängt von ihrem Aufenthaltsstatus ab. Und davon, wie lange sie schon in Deutschland sind. Asylbewerber haben am Anfang noch keine Arbeitserlaubnis. Das gilt für die ganze Zeit, in der sie in der Erstaufnahmeeinrichtung wohnen. Mindestens aber für 3 Monate. Wenn ein Flüchtling dann eine Aufenthaltsgestattung oder eine Duldung hat, darf er arbeiten. Er ist also auf dem Arbeitsmarkt. Wenn er ein Jobangebot hat, muss er eine Genehmigung von der Ausländerbehörde holen. Auf die muss man manchmal lange warten. Und viele Formulare dafür ausfüllen. </p>
-            <p>Manche Asylbewerber und Geduldete aus sicheren Herkunftsstaaten haben kein Recht, in Deutschland zu arbeiten. Das gilt für alle, die ihren Asylantrag nach dem 31. August 2015 gestellt haben. Und die eine Ablehnung bekommen haben. Für sie gilt ein so genanntes Arbeitsverbot. 2016 galten folgende Staaten als sichere Herkunftsstaaten: Bosnien und Herzegowina, Mazedonien, Serbien, Montenegro, Albanien, Kosovo, Ghana und Senegal.</p>
-
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=arbeiten%20in%20deutschland&search_form%5Bsearch_location%5D=Alexanderplatz%2C%20Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.520007%2C13.404954&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
+            <p>Jeder Mensch in Deutschland hat das Wohnrecht. Aber Wohnrecht und das Recht auf eine eigene Wohnung sind verschiedene Dinge. Asylbewerber müssen in den ersten 3 Monaten in einer Erstaufnahmeeinrichtung wohnen. Das sind oft alte Schulen oder Sporthallen. Manchmal wohnen sie da auch länger. In der Zeit entscheiden die Behörden, in welcher Stadt oder Region sie leben werden. Wenn das entschieden ist, ziehen sie dahin um. Sie wohnen dann oft erst einmal in speziellen Wohnheimen für Flüchtlinge. Mit der Aufenthaltsgestattung, der Anerkennung als Flüchtling oder der Duldung verändert sich die Situation. In vielen Bundesländern können Geflüchtete dann eine eigene Wohnung mieten. Allerdings gilt für sie bis zur Asylentscheidung die Residenzpflicht. Das heißt, sie dürfen die Stadt oder die Region nicht verlassen.</p>
+            <p>Der Staat übernimmt für die eigene Wohnung die Mietkosten. Es gibt aber eine Grenze, wie hoch die Miete sein darf. Die Miethöhe hängt davon ab, wieviele Menschen in der Wohnung zusammen wohnen. Eine Familie kann eine größere Wohnung mieten als eine einzelne Person.</p>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=&search_form%5Bsearch_location%5D=K%C3%B6ln%2C+Deutschland&search_form%5Bgenerated_geolocation%5D=52.520007%2C13.404954&search_form%5Bcategory%5D=Wohnen&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal&search_form%5Bage%5D=&search_form%5Btarget_audience%5D=&search_form%5Bexclusive_gender%5D=&search_form%5Blanguage%5D=&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family">Jetzt Hilfe finden ›</a>
 
         </div>
         <div class="content__right">
 
-            <h2>Wie finde ich eine Arbeit?</h2>
+            <h2>Wie kann ich eine Wohnung finden? </h2>
 
-            <p>Der deutsche Staat unterstützt Menschen, die auf der Suche nach einem Job sind. Auch Flüchtlinge. Das heißt dann Arbeitsförderung.</p>
-            <p>Für manche Flüchtlinge ist das Jobcenter zuständig. Und für manche Flüchtlinge die Agentur für Arbeit. Welche Behörde zuständig ist, hängt vom Aufenthaltsstatus ab. Wenn du eine Aufenthaltserlaubnis hast, kümmert sich das Jobcenter um die Arbeitsförderung. Wenn du eine Aufenthaltsgestattung oder eine Duldung hast, ist die Agentur für Arbeit für dich zuständig.</p>
-            <p>Es gibt auch einige Online-Portale, die extra für Flüchtlinge sind. Dort kannst du nach Jobs suchen. Oft kannst du dich dort registrieren und ein eigenes Profil erstellen. So können dich Arbeitgeber finden, die nach passenden Mitarbeitern suchen. Und es gibt viele Organisationen, die Flüchtlinge bei der Integration unterstützen. Einige dieser Organisationen helfen Flüchtlingen dabei, einen Job zu finden.</p>
+            <p>Eine Wohnung zu finden ist vor allem in großen Städten schwierig. Viele Menschen sind auf der Suche. Und die Konkurrenz ist groß. Manchmal muss man lange suchen. Es gibt in Deutschland Organisationen, bei denen du kostenlose Beratungen bekommen kannst. Dort bekommt man die wichtigsten Informationen zum Thema Wohnungssuche und Miete. Du lernst die Rechte und Pflichten von Mietern kennen. Und du erfährst, wo du Wohnungsangebote suchen kannst. Oder wo du Möbel bekommen kannst, die nur wenig kosten.</p>
 
         </div>
     </div>
