--- a/public/themen/integrationskurs-hamburg.html
+++ b/public/themen/integrationskurs-hamburg.html
@@ -82,7 +82,7 @@
                 <li><b>Flüchtlinge, die noch im Asylverfahren sind und eine gute Bleibeperspektive haben:</b> Sie dürfen einen Integrationskurs machen und müssen dafür einen Antrag stellen.</li>
             </ul>
             </p>
-            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=integrationskurs&search_form%5Bsearch_location%5D=Hamburg%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=51.2277411%2C6.7734556&search_form%5Bcategory%5D&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=remote&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal%2Cfax%2Cletter&search_form%5Bage%5D&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bsort_order%5D=nearby&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0">Jetzt Hilfe finden ›</a>
+            <a class="btn" id="lp-button" style="max-width:60%; margin-left: 20%" href="https://www.clarat.org/refugees/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=integrationskurs&search_form%5Bsearch_location%5D=Hamburg%2C+Deutschland&search_form%5Bgenerated_geolocation%5D=53.5510846%2C9.9936818&search_form%5Bcategory%5D=&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Bencounters%5D=hotline%2Cemail%2Cchat%2Cforum%2Conline-course%2Cportal%2Cfax%2Cletter&search_form%5Bage%5D=&search_form%5Btarget_audience%5D=&search_form%5Bexclusive_gender%5D=&search_form%5Blanguage%5D=&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family">Jetzt Hilfe finden ›</a>
 
         </div>
         <div class="content__right">
