Change more text and fix broken link

--- a/public/test/start.html
+++ b/public/test/start.html
@@ -108,7 +108,7 @@
 
 
     <div class="tags">
-        <h2 class="tags__headline">Oder suche nach Schlagworten</h2>
+        <h2 class="tags__headline">Wonach suchen andere?</h2>
         <ul class="tags__tags">
             <li><a href="article.html">Depression</a></li>
             <li><a href="article.html">Kindergeld</a></li>
