--- a/public/test/article.html
+++ b/public/test/article.html
@@ -30,7 +30,7 @@
             </svg>
         </svg>
 
-        <a href="index.html">
+        <a href="start.html">
             <svg class="svg-icon header__logo">
                 <?xml version="1.0" encoding="UTF-8"?>
                 <svg width="90px" height="35px" viewBox="0 0 90 35" version="1.1" xmlns="http://www.w3.org/2000/svg"
