--- a/public/test/article.html
+++ b/public/test/article.html
@@ -135,11 +135,29 @@
                 </ul>
             </div>
 
-            <a href="#0" class="cta">DIREKT ZU LÖSUNGEN</a>
+
 
             <p>Ist dein Kind aggressiv und streitet oft mit anderen? Oder bekommt dein Kind oft Wutausbrüche? Und fragst du dich, wie du auf diese Aggressivität reagieren sollst? Wenn die Aggressionen deines Kindes Überhand nehmen, dann könnte es sich um eine Verhaltensauffälligkeit handeln. In diesem Artikel findest du Antworten auf deine Fragen.</p>
 
             <p>Vorweg: Alle Kinder sind mal traurig, wütend oder aggressiv. Oder Streiten sich mit anderen und testen ihre Grenzen aus. All das ist normal. Und muss nicht gleich Anlass zur Sorge geben. Es gibt viele Artikel und Bücher zu diesem Thema. Hier bekommst du alle wichtigen Information im Überblick. Du erfährst, wie du Verhaltensstörungen bei deinem Kind erkennst. Und was du tun kannst.</p>
+
+            <div class="angebote" id="hilfsangebote">
+                <h4 class="article__headline article__headline--h4">Hilfe und Unterstützung bei Verhaltensauffälligkeiten in deiner Nähe</h4>
+                <p>Du weißt schon, welche Hilfe und Unterstützung die richtige für dein Kind und dich ist?
+                Finde Ansprechpartner in deiner Nähe, die sich mit Verhaltensauffälligkeiten auskennen:
+                </p>
+                <ul>
+                    <li><a href="#0">Unterstützung beim Umgang mit Mobbing in der Schule</a></li>
+                    <li><a href="#0">Beratung für Opfer von Mobbing</a></li>
+                    <li><a href="#0">Beratung zum Umgang mit Mobbing</a></li>
+                    <li><a href="#0">Unterstützung beim Umgang mit Mobbing in der Schule</a></li>
+                    <li><a href="#0">Beratung für Opfer von Mobbing</a></li>
+                    <li><a href="#0">Beratung zum Umgang mit Mobbing</a></li>
+                    <li><a href="#0">Beratung zum Umgang mit Mobbing</a></li>
+                </ul>
+            </div>
+
+             <a href="#0" class="cta">DIREKT ZU LÖSUNGEN</a>
 
             <h2 class="article__headline article__headline--h2" id="sprung1">Definition: Was sind Verhaltensauffälligkeiten?</h2>
 
@@ -247,11 +265,7 @@
             <div class="infobox">
                 BOX MIT QUELLEN LINKS, WEITERFÜHRENDEN LINKS
 
-                <ul>
-                    <li><a href="#0">Huey</a></li>
-                    <li><a href="#0">Dewey</a></li>
-                    <li><a href="#0">Louie</a></li>
-                </ul>
+                <p>Du kannst deinem Kind am besten helfen, wenn du nicht wartest, bis du mit deiner Geduld und deinen Kräften am Ende bist. Denn grundsätzlich gilt: <b>Verhaltensstörungen sind leichter zu behandeln, je früher sie erkannt und angegangen werden.</b> Deshalb zögere nicht und hole dir professionellen Rat und Unterstützung. Du hilfst damit deinem Kind und dir selbst.</p>
             </div>
 
 
