Work on text + add pictures

--- a/public/test/start.html
+++ b/public/test/start.html
@@ -27,7 +27,7 @@
                 </g>
             </svg>    </svg>
     
-        <a href="index.html">
+        <a href="/test/start.html">
         <svg class="svg-icon header__logo">
             <?xml version="1.0" encoding="UTF-8"?>
             <svg width="90px" height="35px" viewBox="0 0 90 35" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -94,16 +94,9 @@
         <button type="submit" class="form__submit"></button>
     </form>
     <datalist id="pasta">
-        <option>Bavette</option>
-        <option>Cannelloni</option>
-        <option>Fiorentine</option>
-        <option>Gnocchi</option>
-        <option>Pappardelle</option>
-        <option>Penne lisce</option>
-        <option>Pici</option>
-        <option>Rigatoni</option>
-        <option>Spaghetti</option>
-        <option>Tagliatelle</option>
+        <option>Mein Kind ist aggressiv</option>
+        <option>Verhaltensauffälligkeiten</option>
+        <option>Aggression bei Kindern</option>
     </datalist>
 
 
