Since the i tag doesn't work probably I partially removed it

--- a/public/test/article.html
+++ b/public/test/article.html
@@ -243,17 +243,17 @@
             <ul>
                 <li>Einsamkeit</li>
                 <li>Stress im Freundeskreis</li>
-                <li>Häufiger Streit zwischen den Eltern (<i>insbesondere auch bei Trennungen oder Scheidungen</i>)</li>
+                <li>Häufiger Streit zwischen den Eltern (insbesondere auch bei Trennungen oder Scheidungen)</li>
                 <li>Psychische Probleme der Eltern</li>
                 <li>Verlust eines Familienmitglieds</li>
                 <li>Zu wenig Aufmerksamkeit, Anerkennung und emotionale Zuwendung
-                (<i>Dadurch kann sich das Kind ungeliebt fühlen</i>)</li>
+                (Dadurch kann sich das Kind ungeliebt fühlen)</li>
                 <li>Zu hohe Erwartungen an das Kind, die es nicht erfüllen kann</li>
                 <li>Fehler in der Erziehung
-                (<i>z.B. durch Vernachlässigung, übermäßiges Verwöhnen, zu viele Strafen, Gewalt, Uneinigkeit der Eltern über den Erziehungsstil oder Regeln aufstellen, aber nicht einhalten</i>)</li>
+                (z.B. durch Vernachlässigung, übermäßiges Verwöhnen, zu viele Strafen, Gewalt, Uneinigkeit der Eltern über den Erziehungsstil oder Regeln aufstellen, aber nicht einhalten)</li>
                 <li>Beengte Wohnverhältnisse</li>
                 <li>Traumatische Erlebnisse
-                (<i>z.B. Gewalt, sexueller Missbrauch oder Vernachlässigung</i>)</li>
+                (z.B. Gewalt, sexueller Missbrauch oder Vernachlässigung)</li>
                 <li>Lange, schwere Krankheiten</li>
                 <li>Schädigungen bei der Geburt oder während der Schwangerschaft</li>
                 <li>Erblich bedingte Störungen im Gehirn</li>
@@ -384,7 +384,7 @@
             <div class="angebote" id="hilfsangebote">
                 <ul>
                     <li><a href="https://www.kindergesundheit-info.de/themen/entwicklung/psychische-gesundheit/psychische-probleme/">www.kindergesundheit-info.de</a> </li>
-                    <li><a href="http://lexikon.stangl.eu/659/verhaltensauffaelligkeit/">http://lexikon.stangl.eu/</a></li>
+                    <li><a href="http://lexikon.stangl.eu/659/verhaltensauffaelligkeit/">lexikon.stangl.eu/</a></li>
                     <li><a href="http://www.heilpraxisnet.de/krankheiten/verhaltensstoerungen-anzeichen-beispiele-ursachen-therapie">www.heilpraxisnet.de</a></li>
                     <li><a href="https://www.elternimnetz.de/kinder/sorgenkinder/verhaltensauffaelligkeiten.php">www.elternimnetz.de</a></li>
                 </ul>
