--- a/public/test/article.html
+++ b/public/test/article.html
@@ -179,7 +179,7 @@
             <p>Dies haben Wissenschaftler in einer Studie zur Gesundheit von Kindern und Jugendlichen in Deutschland, kurz <a href="https://www.kindergesundheit-info.de/fuer-fachkraefte/hintergruende-grundlagen/daten-und-fakten/kiggs-studie/">KiGGS</a> genannt, herausgefunden. Jungen sind davon deutlich häufiger bedroht als Mädchen.</p>
 
             <figure class="article__img">
-                <img src="images/infografik.png" alt="Infografik" />
+                <img src="images/Infografik.png" alt="Infografik" />
             </figure>
 
              <h2 class="article__headline article__headline--h2" id="sprung2">Symptome</h2>
@@ -237,7 +237,7 @@
             <p>Verhaltensauffälligkeiten haben meistens nicht nur die eine Ursache. Es kommen häufig <b>mehrere unterschiedliche Ursachen</b> zusammen.</p>
 
             <figure class="article__img">
-                <img src="images/Verhaltensauffälliges_Kind.jpg" alt="Verhaltensauffälliges Kind" />
+                <img src="images/Verhaltensauffälliges_Kind.jpg" alt="Verhaltensauffaelliges Kind" />
             </figure>
 
             <ul>
