Fix more pictures

--- a/public/test/article.html
+++ b/public/test/article.html
@@ -237,7 +237,7 @@
             <p>Verhaltensauffälligkeiten haben meistens nicht nur die eine Ursache. Es kommen häufig <b>mehrere unterschiedliche Ursachen</b> zusammen.</p>
 
             <figure class="article__img">
-                <img src="images/Verhaltensauffälliges_Kind.jpg" alt="Verhaltensauffaelliges Kind" />
+                <img src="images/Verhaltensauffaelliges_Kind.jpg" alt="Verhaltensauffälliges Kind" />
             </figure>
 
             <ul>
