Add CTAs and fix CSS

--- a/public/test/article.html
+++ b/public/test/article.html
@@ -144,6 +144,8 @@
                 </ul>
             </div>
 
+            <a href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=aggressives%20verhalten&search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">Finde Ansprechpartner in deiner Nähe</a>
+
               <h2 class="article__headline article__headline--h2" id="sprung1">Definition: Was sind Verhaltensauffälligkeiten?</h2>
 
               <p>Wenn Kinder <b>sehr starke Gefühlsausbrüche</b> haben oder ein <b>ungewohntes Verhalten</b> aufzeigen und dies <b>längere Zeit</b> anhält, dann sprechen Experten von Verhaltensauffälligkeiten.</p>
@@ -289,6 +291,9 @@
 
             <p>In manchen Fällen reicht das aber nicht aus, und erst eine Familientherapie oder eine therapeutische Behandlung des Kindes kann die erwünschten Veränderungen herbeiführen.</p>
 
+             <a href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=aggressives%20verhalten%20erziehungsberatung&search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">Finde Erziehungs- und Familienberatungen in deiner Nähe</a>
+
+
             <h3 class="article__headline article__headline--h3" id="sprung6">Therapie</h3>
 
             <p>Manchmal reicht eine Beratung alleine nicht aus. Dann kann eine Therapie helfen.
@@ -303,15 +308,21 @@
 
             <p>Der Begriff kommt aus dem Griechischen und bedeutet soviel wie „Gesund werden durch Handeln“. Ergotherapie ist eine Kombination aus Bewegung, Wahrnehmung und Lernen. Zunächst führt der Ergotherapeut ein intensives Gespräch mit den Eltern des Kindes. Im Anschluss finden mehrere Treffen zwischen dem Kind und dem Therapeuten statt. Er beobachtet das Kind beim Spielen und beim Lösen von Aufgaben und entscheidet sich dann für den weiteren Verlauf der Therapie.  Die Dauer einer Ergotherapie hängt von dem Alter und der Ausprägung der Verhaltensauffälligkeiten ab.  </p>
 
+            <a href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=ergotherapie&search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">Finde Ergotherapeuten in deiner Nähe</a>
+
             <h4 class="article__headline article__headline--h4">Psychotherapie</h4>
 
             <p>Bei älteren Kindern und Jugendlichen kann zur Behandlung von Verhaltensauffälligkeiten eine Verhaltenstherapie sinnvoll sein. Durch eine Verhaltenstherapie können Kinder und Jugendliche bestimmte Verhaltensweise lernen und auch wieder “verlernen”. Anhand von unterschiedlichen Methoden soll ein angemessenes Verhalten eingeübt werden.</p>
 
             <p>Eltern und Bezugspersonen werden intensiv in die Therapie mit einbezogen. Denn sie haben einen wesentlichen Anteil an der Entwicklung eines Kindes. Manchmal kann es auch sinnvoll sein, die Eltern oder Bezugspersonen ohne die Kinder zu beraten. </p>
 
+            <a href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=aggressives%20verhalten%20psychotherapie&search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">Finde Psychotherapeuten in deiner Nähe</a>
+
             <h4 class="article__headline article__headline--h4">Familientherapie</h4>
 
             <p>Häufig macht ein Kind oder ein Jugendlicher durch seine Verhaltensauffälligkeit auf ein Problem innerhalb der Familie aufmerksam. Das Kind oder der Jugendliche zeigt damit, dass etwas in der Familie nicht stimmt. Es ist nur der sogenannte Symptomträger, der darauf hinweist, dass das gesamte “System Familie” ein Problem angehen sollte. Daher wird bei einer Familientherapie die ganze Familie behandelt. Gemeinsam mit allen Familienmitglieder wird nach Lösungen gesucht.</p>
+
+             <a href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=aggressives%20verhalten%20Familientherapie&search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">Finde Famiientherapeuten in deiner Nähe</a>
 
 
             <h3 class="article__headline article__headline--h3" id="sprung7">Soziale Gruppenarbeit</h3>
@@ -342,6 +353,8 @@
 
             <p>Die Soziale Gruppenarbeit ist eine ambulante Hilfe zur Erziehung nach §29 SGB VIII und wird beim Jugendamt beantragt.</p>
 
+            <a href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=aggressives%20verhalten%20Soziale%20Gruppenarbeit&search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">Finde Soziale Gruppenarbeit in deiner Nähe</a>
+
             <h3 class="article__headline article__headline--h3" id="sprung8">Soziales Kompetenztraining</h3>
 
             <p>Das Soziale Kompetenztraining ist so ähnlich wie die Soziale Gruppenarbeit. Das Kompetenztraining ist aber meistens kürzer und nicht so umfangreich wie die Gruppenarbeit. Hier geht es nur um den Umgang mit Anderen. </p>
@@ -369,6 +382,9 @@
 
             <p>Auch die Eltern der Kinder werden mit einbezogen. Bei Info-Veranstaltungen und Beratungsgesprächen lernen auch sie, wie sie ihre Kinder unterstützen können.</p>
 
+             <a href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=aggressives%20verhalten%20training&search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">Finde Soziales Kompetenztraining in deiner Nähe</a>
+
+
             <h3 class="article__headline article__headline--h3" id="sprung9">Anti-Gewalt-Training</h3>
 
             <p>Wenn sich die Verhaltensauffälligkeiten von Kindern und Jugendlichen in eine gewalttätige Richtung entwickeln, kann ein Anti-Gewalt-Training helfen. Oder ein Anti-Aggressions-Training. So ein Training kann sinnvoll sein, wenn Kinder schlagen, treten, beißen, sich oder andere verletzen oder sehr aggressiv sind.</p>
@@ -379,6 +395,7 @@
 
             <p>In Berlin zum Beispiel bieten freie Träger und die Polizei Kurse an, in denen sich Jugendliche mit dem Thema Gewalt auseinandersetzen. Die Berater gehen auch in Schulen.</p>
 
+            <a href="https://www.clarat.org/family/angebote?utf8=%E2%9C%93&search_form%5Bquery%5D=aggressives%20verhalten%20Anti-Gewalt-Training&search_form%5Bsearch_location%5D=Berlin%2C%20Deutschland&search_form%5Bgenerated_geolocation%5D=52.52000659999999%2C13.404954&search_form%5Bexact_location%5D=false&search_form%5Bcontact_type%5D=personal&search_form%5Btarget_audience%5D&search_form%5Bexclusive_gender%5D&search_form%5Blanguage%5D&search_form%5Bresidency_status%5D&search_form%5Bsort_order%5D=relevance&search_form%5Bsection_identifier%5D=family&search_form%5Bpage%5D=0" class="cta">Finde Anti-Gewalt-Training in deiner Nähe</a>
 
             <h2 class="article__headline article__headline--h2">Quellen</h2>
             <div class="angebote" id="hilfsangebote">
