--- a/public/test/article.html
+++ b/public/test/article.html
@@ -274,7 +274,7 @@
 
             <p>Verhaltensauffälligkeiten müssen von Ärzten diagnostiziert werden. Und Kinder und Jugendliche mit Verhaltensauffälligkeiten brauchen professionelle Hilfe. Es gibt verschiedene Hilfsangebote, die euch unterstützen können.</p>
 
-            <p>Du kannst deinem Kind am besten helfen, wenn du nicht wartest, bis du selbst mit deiner Geduld und deinen Kräften am Ende bist. Denn grundsätzlich gilt: Je früher <p>Verhaltensstörungen erkannt werden, umso leichter können sie behandelt werden.</p> Und umso besser kann deinem Kind geholfen werden. Deshalb zögere nicht und hole dir professionellen Rat und Unterstützung. Du hilfst damit deinem Kind und dir selbst.</p>
+            <p>Du kannst deinem Kind am besten helfen, wenn du nicht wartest, bis du selbst mit deiner Geduld und deinen Kräften am Ende bist. Denn grundsätzlich gilt: <b>Je früher Verhaltensstörungen erkannt werden, umso leichter können sie behandelt werden.</b> Und umso besser kann deinem Kind geholfen werden. Deshalb zögere nicht und hole dir professionellen Rat und Unterstützung. Du hilfst damit deinem Kind und dir selbst.</p>
 
             <p>Viele Familien haben die gleichen oder ähnliche Probleme. Welche Hilfe am besten zum Kind und zu den Eltern passt, muss jede Familie selbst entscheiden. Es gibt verschiedene Hilfsangebote für Kinder und Jugendliche mit Verhaltensauffälligkeiten: Es gibt <a href="#sprung5">Beratungsstellen</a>, <a href="#sprung6">Therapien</a>, <a href="#sprung7">Gruppenarbeit</a> oder verschiedene <a href="#sprung8">Trainings</a>, die verhaltensauffällige Kindern und Jugendliche unterstützen. Du musst für dich selbst herausfinden, welche Hilfeform du für dein Kind und für dich auswählst. </p>
 
