Iteration of start.html after user test

--- a/public/test/start.html
+++ b/public/test/start.html
@@ -90,8 +90,8 @@
     </div>
 
     <form action="article.html" method="get" class="form">
-        <input type="text" class="form__input" list="suggestions" />
-        <button type="submit" class="form__submit"></button>
+        <input type="text" class="form__input" list="suggestions" placeholder="Deine Suchbegriffe…"/>
+        <button type="submit" class="form__submit">Suche starten</button>
     </form>
 
     <div class="tags">
@@ -102,7 +102,7 @@
             <li><a href="article.html">Sucht</a></li>
             <li><a href="article.html">ADHS</a></li>
             <li><a href="article.html">Jugendamt</a></li>
-            <li><a href="article.html">Magersucht</a></li>
+            <li><a href="article.html">Aggression</a></li>
             <li><a href="article.html">Pubertät</a></li>
             <li><a href="article.html">Alleinerziehend</a></li>
             <li><a href="article.html">Trauma</a></li>
